--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,7 +40,7 @@
         cursor: pointer;
         margin-top: 27px;
         margin-bottom: 23px;
-        color: white;
+        color: #a304db;
 		background-color: black;
 		margin-right: 30px;
     }
